--- a/style.css
+++ b/style.css
@@ -88,7 +88,18 @@
 
 .buttonLearnMoreBasicPlan {
   background-color: #8086dc;
+  border: 1px solid #8086dc;
+  border-radius: 5px;
   color: white;
+  font-size: 16px;
+  margin: 15px 0 15px 0;
+  padding: 10px 0 10px 0;
+  width: 90%;
+}
+
+.buttonLearnMoreBasicPlan:hover {
+  background-color: white;
+  color: #8086dc;
 }
 
 .buttonLearnMoreProfessionalPlan {
