--- a/style.css
+++ b/style.css
@@ -105,5 +105,17 @@
 }
 
 .buttonLearnMoreProfessionalPlan {
+  background-color: white;
+  border: 1px solid white;
+  border-radius: 5px;
+  color: #8086dc;
+  font-size: 16px;
+  margin: 15px 0 15px 0;
+  padding: 10px 0 10px 0;
+  width: 90%;
+}
 
+.buttonLearnMoreProfessionalPlan:hover {
+  background-color: #8086dc;
+  color: white;
 }
