--- a/style.css
+++ b/style.css
@@ -70,12 +70,42 @@
     flex-direction: row;
 }
 
-.card {
+/* .card {
     align-items: center;
     width: 30%;
     display: flex;
     flex-direction: column;
     border: 1px white solid;
+} */
+
+.basicCard {
+  align-items: center;
+  border: 1px white solid;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 30%;
+}
+
+.professionalCard {
+  align-items: center;
+  background-color: #8086dc;
+  border: 1px #8086dc solid;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  color: white;
+  padding: 20px 5px;
+  width: 30%;
+}
+
+.masterCard {
+  align-items: center;
+  border: 1px white solid;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  width: 30%;
 }
 
 .hrBasicPlan {
