--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+body {
+  background: url('./images/background.png') no-repeat center center fixed; 
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
 .ourPricingTitle {
   text-align: center;
 }
