center align cards

--- a/style.css
+++ b/style.css
@@ -91,9 +91,10 @@ body {
   background-color: white;
   border: 1px white solid;
   border-radius: 10px;
+  color: #8086dc;
   display: flex;
   flex-direction: column;
-  color: #8086dc;
+  margin: 0 0 0 auto;
   padding: 20px 5px;
   width: 30%;
 }
@@ -103,9 +104,9 @@ body {
   background-color: #8086dc;
   border: 1px #8086dc solid;
   border-radius: 10px;
+  color: white;
   display: flex;
   flex-direction: column;
-  color: white;
   padding: 20px 5px;
   width: 30%;
 }
@@ -115,9 +116,10 @@ body {
   background-color: white;
   border: 1px white solid;
   border-radius: 10px;
+  color: #8086dc;
   display: flex;
   flex-direction: column;
-  color: #8086dc;
+  margin: 0 auto 0 0;
   padding: 20px 5px;
   width: 30%;
 }
