--- a/style.css
+++ b/style.css
@@ -10,6 +10,20 @@ body {
   text-align: center;
 }
 
+.annuallyMonthlySwitch {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.annually {
+  
+}
+
+.monthly {
+  
+}
+
 /* The switch - the box around the slider */
 .switch {
     position: relative;
