changed style of switch

--- a/style.css
+++ b/style.css
@@ -17,11 +17,11 @@ body {
 }
 
 .annually {
-  
+  margin: 0 10px 0 0;
 }
 
 .monthly {
-  
+  margin: 0 0 0 10px;
 }
 
 /* The switch - the box around the slider */
