--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ body {
   color: #8086dc;
   display: flex;
   flex-direction: column;
-  margin: 15px 0 0 auto;
+  margin: 60px 0 40px auto;
   padding: 20px 5px;
   width: 30%;
 }
@@ -121,8 +121,8 @@ body {
   color: white;
   display: flex;
   flex-direction: column;
-  margin: 15px 0 0 0;
-  padding: 20px 5px;
+  margin: 30px 0 0 0;
+  padding: 50px 5px;
   width: 30%;
 }
 
@@ -134,7 +134,7 @@ body {
   color: #8086dc;
   display: flex;
   flex-direction: column;
-  margin: 15px auto 0 0;
+  margin: 60px auto 40px 0;
   padding: 20px 5px;
   width: 30%;
 }
